--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/grafana.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/grafana.yaml
@@ -63,6 +63,7 @@ spec:
     labels:
       app: grafana
     annotations:
+      sidecar.istio.io/inject: '{{ .Values.serviceMesh.enabled }}'
       reloader.stakater.com/search: "true"
     envFrom:
       - secretRef:
