--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/operator.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/operator.yaml
@@ -13,6 +13,8 @@ spec:
     metadata:
       labels:
         name: grafana-operator
+      annotations:
+        sidecar.istio.io/inject: '{{ .Values.serviceMesh.enabled }}'
     spec:
       serviceAccountName: grafana-operator
       serviceAccount: grafana-operator
