--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/values.yaml
@@ -27,6 +27,9 @@ resource:
     cpu: 100m
     memory: 64Mi
 
+serviceMesh:
+  enabled: true
+
 # Log level: none, critical, serror, error, warn, sinfo, info, transient, debug
 
 logLevel: info
