--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-sso-session-proxy/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-sso-session-proxy/values.yaml
@@ -24,6 +24,9 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
+serviceMesh:
+  enabled: true
+
 podAnnotations: {}
 
 podSecurityContext: {}
