--- a/Lib/Neon.Kube.Setup/Resources/Helm/node-problem-detector/templates/daemonset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/node-problem-detector/templates/daemonset.yaml
@@ -33,6 +33,7 @@ spec:
         {{ $key }}: {{ $val | quote }}
         {{- end}}
       annotations:
+        sidecar.istio.io/inject: '{{ .Values.serviceMesh.enabled }}'
         checksum/config: {{ include (print $.Template.BasePath "/custom-config-configmap.yaml") . | sha256sum }}
         scheduler.alpha.kubernetes.io/critical-pod: ''
         {{- if .Values.annotations }}
