--- a/Lib/Neon.Kube.Setup/Resources/Helm/node-problem-detector/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/node-problem-detector/values.yaml
@@ -83,6 +83,9 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+serviceMesh:
+  enabled: true
+
 rbac:
   create: true
   pspEnabled: false
