--- a/Lib/Neon.Kube.Setup/Resources/Helm/postgres-operator/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/postgres-operator/values.yaml
@@ -20,6 +20,9 @@ enableJsonLogging: false
 
 replicas: 1
 
+serviceMesh:
+  enabled: true
+
 # general configuration parameters
 configGeneral:
   # choose if deployment creates/updates CRDs with OpenAPIV3Validation
