--- a/Lib/Neon.Kube.Setup/Resources/Helm/reloader/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/reloader/values.yaml
@@ -17,6 +17,9 @@ fullnameOverride: reloader
 kubernetes:
   host: https://kubernetes.default
 
+serviceMesh:
+  enabled: true
+
 reloader:
   isArgoRollouts: false
   isOpenshift: false
