--- a/Lib/Neon.Kube.Setup/Resources/Helm/dex/templates/deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/dex/templates/deployment.yaml
@@ -16,6 +16,7 @@ spec:
   template:
     metadata:
       annotations:
+        sidecar.istio.io/inject: '{{ .Values.serviceMesh.enabled }}'
       {{- with .Values.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
