--- a/Lib/Neon.Kube.Setup/Resources/Helm/etcd/templates/statefulset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/etcd/templates/statefulset.yaml
@@ -16,8 +16,9 @@ spec:
   template:
     metadata:
       name: {{ template "etcd.fullname" . }}
-      {{- with .Values.podAnnotations }}
       annotations:
+        sidecar.istio.io/inject: '{{ .Values.serviceMesh.enabled }}'
+      {{- with .Values.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
