--- a/Lib/Neon.Kube.Setup/Resources/Helm/glauth/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/glauth/values.yaml
@@ -15,6 +15,9 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: "neon-sso-glauth"
 
+serviceMesh:
+  enabled: true
+
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
