--- a/Lib/Neon.Kube.Setup/Resources/Helm/harbor/templates/harborcluster.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/harbor/templates/harborcluster.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: {{ .Release.Namespace | quote }}
 spec:
   version: {{ .Values.harbor.version }}
+  {{- if .Values.metrics.enabled }}
   exporter:
     nodeSelector:
     {{- toYaml .Values.nodeSelector | nindent 8 }}
@@ -14,6 +15,8 @@ spec:
       {{- toYaml . | nindent 6 }}
     {{- end }}
     {{- end }}
+  {{- end }}
+  {{- if .Values.components.chartMuseum.enabled }}
   chartmuseum:
     absoluteUrl: false
     image: {{ .Values.image.organization }}/harbor-chartmuseum-photon:v{{ .Values.harbor.version }}
@@ -26,6 +29,7 @@ spec:
     {{- end }}
     {{- end }}
     resources: {}
+  {{- end }}
   core:
     image: {{ .Values.image.organization }}/harbor-core:v{{ .Values.harbor.version }}
     resources: {}
@@ -98,6 +102,7 @@ spec:
     resources: {}
     workerCount: 10
   logLevel: info
+  {{- if .Values.components.notary.enabled }}
   notary:
     migrationEnabled: true
     server:
@@ -120,6 +125,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- end }}
+  {{- end }}
   portal:
     resources: {}
   cache:
@@ -145,6 +151,7 @@ spec:
     resources: {}
     metrics:
       enabled: {{ .Values.metrics.enabled }}
+  {{- if .Values.components.trivy.enabled }}
   trivy:
     image: {{ .Values.image.organization }}/harbor-trivy-adapter-photon:v{{ .Values.harbor.version }}
     nodeSelector:
@@ -160,4 +167,5 @@ spec:
     storage:
       cachePersistentVolume:
         claimName: registry-trivy-cache
+  {{- end }}
   updateStrategyType: RollingUpdate
