--- a/Lib/Neon.Kube.Setup/Resources/Helm/harbor/templates/servicemonitor.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/harbor/templates/servicemonitor.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.metrics.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
@@ -14,3 +15,4 @@ spec:
   selector:
     matchLabels:
       goharbor.io/operator-controller: exporter
+{{- end }}
