--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/templates/deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-cluster-operator/templates/deployment.yaml
@@ -20,6 +20,7 @@ spec:
         prometheus.io/scrape: "true"
         prometheus.io/path: "/"
         prometheus.io/port: "9762"
+        sidecar.istio.io/inject: '{{ .Values.serviceMesh.enabled }}'
     spec:
       serviceAccountName: neon-cluster-operator
       tolerations:
