--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
@@ -19,6 +19,7 @@ spec:
         prometheus.io/scrape: "true"
         prometheus.io/path: "/"
         prometheus.io/port: "9762"
+        sidecar.istio.io/inject: '{{ .Values.serviceMesh.enabled }}'
     spec:
       serviceAccountName: neon-node-agent
       hostPID: true
