--- a/Lib/Neon.Kube.Setup/Resources/Helm/redis-ha/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/redis-ha/values.yaml
@@ -17,6 +17,9 @@ imagePullSecrets: []
 ## replicas number for each component
 replicas: 3
 
+serviceMesh:
+  enabled: true
+
 ## read-only replicas
 ## indexed slaves get never promoted to be master
 ## index starts with 0 - which is master on init
