--- a/Lib/Neon.Kube.Setup/Resources/Helm/reloader/templates/deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/reloader/templates/deployment.yaml
@@ -27,8 +27,9 @@ spec:
 {{- end }}
   template:
     metadata:
-{{- if .Values.reloader.deployment.pod.annotations }}
       annotations:
+        sidecar.istio.io/inject: '{{ .Values.serviceMesh.enabled }}'
+{{- if .Values.reloader.deployment.pod.annotations }}
 {{ toYaml .Values.reloader.deployment.pod.annotations | indent 8 }}
 {{- end }}
       labels:
