--- a/Lib/Neon.Kube.Setup/Resources/Helm/tempo/Chart.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/tempo/Chart.yaml
@@ -1,11 +1,11 @@
 apiVersion: v2
-name: tempo
-description: Grafana Tempo Single Binary Mode
+name: tempo-distributed
+description: Grafana Tempo in MicroService mode
 type: application
-version: 0.7.3
-appVersion: v1.0.1
+version: 0.16.9
+appVersion: 1.3.2
 engine: gotpl
-home: https://grafana.net
+home: https://grafana.com/docs/tempo/latest/
 icon: https://raw.githubusercontent.com/grafana/tempo/master/docs/tempo/website/logo_and_name.png
 sources:
   - https://github.com/grafana/tempo
