--- a/Lib/Neon.Kube.Setup/Resources/Helm/tempo/templates/configmap-tempo.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/tempo/templates/configmap-tempo.yaml
@@ -1,38 +1,14 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "tempo.name" . }}
+  name: {{ template "tempo.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "tempo.labels" . | nindent 4 }}
+    {{- include "tempo.distributorLabels" . | nindent 4 }}
 data:
+  tempo-query.yaml: |
+    {{- tpl .Values.queryFrontend.query.config . | nindent 4 }}
   overrides.yaml: |
-    overrides:
+    {{- tpl .Values.overrides . | nindent 4 }}
   tempo.yaml: |
-    auth_enabled: {{ .Values.tempo.authEnabled }}
-    compactor:
-      ring:
-        kvstore:
-          store: etcd
-          prefix: neonkube.io/tempo/
-          etcd:
-            endpoints:
-              - neon-etcd.neon-system.svc.cluster.local:2379
-      compaction:
-        compacted_block_retention: {{ .Values.tempo.retention }}
-    distributor:
-      ring:
-        kvstore:
-          store: etcd
-          prefix: neonkube.io/tempo/
-          etcd:
-            endpoints:
-              - neon-etcd.neon-system.svc.cluster.local:2379
-      receivers:
-        {{- toYaml .Values.tempo.receivers | nindent 8 }}
-    ingester:
-       {{- toYaml .Values.tempo.ingester | nindent 6 }}
-    server:
-      http_listen_port: {{ .Values.tempo.server.httpListenPort }}
-    storage:
-      {{- toYaml .Values.tempo.storage | nindent 6 }}
+    {{- tpl .Values.config . | nindent 4 }}
