--- a/Lib/Neon.Kube.Setup/Resources/Helm/loki/Chart.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/loki/Chart.yaml
@@ -1,14 +1,14 @@
-apiVersion: "v1"
-name: loki
-version: 2.3.0
-appVersion: v2.1.0
-kubeVersion: "^1.10.0-0"
-description: "Loki: like Prometheus, but for logs."
-home: https://grafana.com/loki
-icon: https://raw.githubusercontent.com/grafana/loki/master/docs/sources/logo.png
+apiVersion: v2
+name: loki-distributed
+description: Helm chart for Grafana Loki in microservices mode
+type: application
+appVersion: 2.5.0
+version: 0.48.1
+home: https://grafana.github.io/helm-charts
 sources:
   - https://github.com/grafana/loki
+  - https://grafana.com/oss/loki/
+  - https://grafana.com/docs/loki/latest/
+icon: https://grafana.com/docs/loki/latest/logo_and_name.png
 maintainers:
-  - name: Loki Maintainers
-    email: lokiproject@googlegroups.com
-engine: gotpl
+  - name: unguiculus
